--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -15,10 +15,13 @@
 
 
 <p><%= @article.body %></p>
+
 <%= link_to "<< Back to Articles List", articles_path %>
+<% if logged_in?%>
 <%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
 <%= link_to "edit", edit_article_path(@article) %>
 <%= render partial: 'comments/form' %>
+<% end %>
 
 <h3> Comments (<%= @article.comments.size %>)</h3>
 
